# Graph-Hypernetwork-Forge

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .pre-commit-config.yaml  .releaserc.json  .secrets.baseline  AUTONOMOUS_BREAKTHROUGH_RESEARCH_COMPLETE.md  AUTONOMOUS_EXECUTION_COMPLETE.md  AUTONOMOUS_IMPLEMENTATION_COMPLETE.md  AUTONOMOUS_IMPLEMENTATION_COMPLETE_V4.md  AUTONOMOUS_IMPLEMENTATION_SUMMARY.md  AUTONOMOUS_INNOVATION_COMPLETE.md  AUTONOMOUS_SDLC_COMPLETE.md  AUTONOMOUS_SDLC_EXECUTION_COMPLETE.md  AUTONOMOUS_SDLC_GENERATION_3_COMPLETE.md  AUTONOMOUS_SDLC_V4_COMPLETE.md  BACKLOG.md  BREAKTHROUGH_RESEARCH_VALIDATION_COMPLETE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  Dockerfile  ERROR_HANDLING_ENHANCEMENTS.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  Makefile  PRODUCTION_DEPLOYMENT_GUIDE.md  PROJECT_CHARTER.md  README.md  RESEARCH_OPPORTUNITIES.md  SECURITY.md  autonomous_breakthrough_research_orchestrator.py  autonomous_production_deployment.py  autonomous_quality_gates.py  autonomous_quality_gates_validation.py  autonomous_research_breakthrough_demo.py  autonomous_research_execution.py  demo.py  (+27 more)
.devcontainer/: devcontainer.json  post-create.sh
.github/: SECURITY.md  dependabot.yml  project-metrics.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  security_vulnerability.yml
.terragon/: value-config.yaml  value-metrics.json
autonomous_research_output/: breakthrough_demo_results.json
autonomous_research_output/generated_papers/: Novel_Quantum-Enhanced_Graph_Learning__Breakthrough_1.1.md  Novel_Quantum-Enhanced_Graph_Learning__Breakthrough_1.2.md  Novel_Quantum-Enhanced_Graph_Learning__Breakthrough_3.1.md  Novel_Quantum-Enhanced_Graph_Learning__Breakthrough_3.2.md  Novel_Quantum-Enhanced_Graph_Learning__Breakthrough_4.1.md  Novel_Quantum-Enhanced_Graph_Learning__Breakthrough_4.2.md
configs/: base.yaml
configs/monitoring/: alerting.yml  dashboard.yml  grafana-dashboard.json  health-checks.yml  prometheus.yml
configs/monitoring/alerts/: application.yml
configs/observability/: opentelemetry.yml
docs/: ARCHITECTURE.md  DEVELOPMENT.md  MONITORING.md  Makefile  ROADMAP.md
docs/adr/: README.md  adr-0001-hypernetwork-architecture.md  adr-0002-text-encoder-selection.md  adr-0003-gnn-backend-abstraction.md
docs/runbooks/: README.md
docs/source/: api_reference.rst  conf.py  getting_started.md  index.rst
docs/source/_static/: custom.css
docs/workflows/: README.md  SETUP_REQUIRED.md  branch-protection.md  ci.md  github-actions-templates.md  security-advanced.md
docs/workflows/examples/: ci.yml  dependency-update.yml  security-scan.yml
examples/: autonomous_research_breakthrough_demo.py  basic_usage.py  cross_domain_transfer.py  enhanced_error_handling_demo.py  knowledge_graph_completion.py  monitoring_setup_example.py  optimized_processing.py  production_monitoring.py  research_experiments.py
graph_hypernetwork_forge/: __init__.py  api.py
graph_hypernetwork_forge/cache/: __init__.py  cache_manager.py
graph_hypernetwork_forge/data/: __init__.py  datasets.py  knowledge_graph.py
graph_hypernetwork_forge/database/: __init__.py  connection.py
graph_hypernetwork_forge/models/: __init__.py  adaptive_dimension_hypernetworks.py  adaptive_hypernetworks.py  advanced_hypernetworks.py  diffusion_weight_generator.py  encoders.py  gnns.py  hypergnn.py  hypernetworks.py  meta_learning_hypernetworks.py  neural_architecture_search.py  next_generation_hypergnn.py  quantum_enhanced_hypernetworks.py  quantum_graph_networks.py  research_baselines.py  self_evolving_hypernetworks.py  weight_generator.py
graph_hypernetwork_forge/research/: autonomous_research_orchestrator.py  experimental_framework.py
graph_hypernetwork_forge/utils/: __init__.py  adaptive_optimization.py  advanced_resilience.py  advanced_validation.py  alerting.py  autonomous_orchestrator.py  batch_processing.py  caching.py  dashboard.py  datasets.py  distributed_inference.py  distributed_optimization.py  distributed_training.py  distributed_training_broken.py  evaluation.py  evaluation_utils.py  exceptions.py  federated_learning.py  globalization.py  graph_utils.py  health_checks.py  logging_utils.py  memory_utils.py  metrics_collector.py  model_utils.py  monitoring.py  monitoring_server.py  optimization.py  performance_optimizer.py  performance_optimizer_broken.py  production_monitoring.py  profiling.py  resilience_advanced.py  resilience_framework.py  scalable_processing.py  security_compliance.py  security_utils.py  text_utils.py  training.py
notebooks/: getting_started.ipynb
scripts/: benchmark.py  build.sh  demo.py  deployment_check.py  evaluate.py  metrics.py  quality_gates_validator.py  setup_dev_env.sh  start_monitoring.py  train.py
scripts/security/: container-security.sh  generate-sbom.sh  scan-dependencies.sh
src/graph_hypernetwork_forge/: __init__.py
src/graph_hypernetwork_forge/data/: __init__.py  knowledge_graph.py
src/graph_hypernetwork_forge/models/: __init__.py  hypergnn.py
tests/: __init__.py  conftest.py  test_advanced_features.py  test_data.py  test_evaluation.py  test_hypergnn.py  test_integration.py  test_integration_complete.py  test_models.py  test_performance.py  test_quality_gates.py  test_security.py  test_training.py  test_utils.py  test_weight_generator.py
tests/e2e/: __init__.py
tests/fixtures/: __init__.py  sample_graphs.py
tests/integration/: __init__.py  test_end_to_end.py
