[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graph-hypernetwork-forge"
version = "0.1.0"
description = "A hypernetwork that generates GNN weights on-the-fly from textual metadata"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Daniel Schmidt", email = "hypernetwork-forge@yourdomain.com"}
]
maintainers = [
    {name = "Daniel Schmidt", email = "hypernetwork-forge@yourdomain.com"}
]
keywords = ["graph-neural-networks", "hypernetworks", "zero-shot", "knowledge-graphs", "pytorch"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.3.0",
    "torch-geometric>=2.5.0",
    "transformers>=4.40.0",
    "sentence-transformers>=3.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "networkx>=3.0",
    "pandas>=2.0.0",
    "tqdm>=4.65.0",
    "hydra-core>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.5",
    "pre-commit>=3.0",
    "jupyter>=1.0",
    "notebook>=6.0",
]
wandb = ["wandb>=0.16.0"]
all = ["graph-hypernetwork-forge[dev,wandb]"]

[project.urls]
"Homepage" = "https://github.com/yourusername/graph-hypernetwork-forge"
"Bug Reports" = "https://github.com/yourusername/graph-hypernetwork-forge/issues"
"Source" = "https://github.com/yourusername/graph-hypernetwork-forge"
"Documentation" = "https://github.com/yourusername/graph-hypernetwork-forge/blob/main/README.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "ARG"]
ignore = ["E501"]

[tool.ruff.per-file-ignores]
"tests/*" = ["ARG", "S101"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "--cov=graph_hypernetwork_forge --cov-report=term-missing --cov-report=html"