[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graph-hypernetwork-forge"
version = "0.1.0"
description = "A hypernetwork that generates GNN weights on-the-fly from textual metadata"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Daniel Schmidt"}]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.3.0",
    "torch-geometric>=2.5.0",
    "transformers>=4.40.0",
    "sentence-transformers>=3.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "networkx>=3.0",
    "pandas>=2.0.0",
    "tqdm>=4.65.0",
    "wandb>=0.16.0",
    "hydra-core>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/graph-hypernetwork-forge"
Repository = "https://github.com/yourusername/graph-hypernetwork-forge"
Issues = "https://github.com/yourusername/graph-hypernetwork-forge/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["graph_hypernetwork_forge*"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--cov=graph_hypernetwork_forge --cov-report=html --cov-report=term-missing"